2023-01-08  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-ast.h (PKL_AST_BUILTIN_SET_IOS): Remove.
	* libpoke/pkl-gen.c (pkl_gen_ps_comp_stmt): Remove case for
	PKL_AST_BUILTIN_SET_IOS.
	* libpoke/pkl-lex.l: Remove rule for __PKL_BUILTIN_SET_IOS__.
	* libpoke/pkl-tab.y (builtin): Remove rule for BUILTIN_SET_IOS.
	* libpoke/pkl-gen-builtins.pks (builtin_set_ios): Remove.
	* libpoke/pkl-rt.pk (set_ios): Rewrite as a normal function.

2023-01-08  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-rt.pk (_pkl_print_format_any): Simplify inline asm
	snippet.

2022-01-07  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* pickles/pcap.pk (PCAP_Packet): Declare body as a byte array.

2022-12-22  Darshit Shah  <darnir@gnu.org>

	* doc/poke.texi: Simplify Hyperlink setup by calling `make install`

2022-12-10  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-gen.pks (struct_constructor): Emit
	tv_field_constructed event for fields for which there are
	initializers in the constructor.

2022-12-10  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-insn.def: Define oover.
	* libpoke/pvm.jitter (oover): New instruction.
	* libpoke/pkl-rt.pk (PK_TV_FIELD_CONSTRUCTED): Define.
	* libpoke/pkl.h (PK_TV_FIELD_CONSTRUCTED): Likewise.
	* libpoke/pkl-gen.pks (emit_tv_field_event): New macro.
	(struct_field_mapper): Use it.
	(struct_field_constructor): Emit an event for constructed fields.
	(typeof): Eval to PVM_NULL if the requested typeof is for Pk_Type.
	* poke/pk-tracer.pk (pk_tv_action_field_mapped_constructed):
	Rename from pk_tv_action_field_mapped and adapted to handle both
	events.

2022-12-10  Jose E. Marchesi  <jemarch@gnu.org>

	* testsuite/poke.pkl/scons-constraints-1.pk: Adapt to new
	exception mesage.
	* testsuite/poke.pkl/scons-constraints-2.pk: Likewise.
	* testsuite/poke.pktest/pktest-12.pk: Likewise.

2022-12-10  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-ast.h (struct pkl_ast_struct_type_field): New field
	constraint_src.