@@ -20,22 +20,6 @@
 ;;; Note that each macro should expand to the body of a function,
 ;;; and handle its arguments and return value whenever necessary.
 
-;;; RAS_MACRO_BUILTIN_CLOSE
-;;;
-;;; Body of the `close' compiler built-in with prototype
-;;; (int<32> ios) void
-
-        .macro builtin_close
-        pushvar 0, 0
-        dup
-        dup
-        .call _pkl_run_ios_close_pre_hook
-        drop
-        close
-        .call _pkl_run_ios_close_hook
-        drop
-        .end
-
 ;;; RAS_MACRO_BUILTIN_IOHANDLER
 ;;;
 ;;; Body of the `iohandler' compiler built-in with prototype
