@@ -1,5 +1,15 @@
 2023-01-08  Jose E. Marchesi  <jemarch@gnu.org>
 
+	* libpoke/pkl-ast.h (PKL_AST_BUILTIN_CLOSE): Remove.
+	* libpoke/pkl-gen.c (pkl_gen_ps_comp_stmt): Remove case for
+	PKL_AST_BUILTIN_CLOSE.
+	* libpoke/pkl-lex.l: Remove rule for __PKL_BUILTIN_CLOSE__.
+	* libpoke/pkl-tab.y (builtin): Remove rule for BUILTIN_CLOSE.
+	* libpoke/pkl-gen-builtins.pks (builtin_close): Remove.
+	* libpoke/pkl-rt.pk (close): Rewrite as a normal function.
+
+2023-01-08  Jose E. Marchesi  <jemarch@gnu.org>
+
 	* libpoke/pkl-ast.h (PKL_AST_BUILTIN_SET_IOS): Remove.
 	* libpoke/pkl-gen.c (pkl_gen_ps_comp_stmt): Remove case for
 	PKL_AST_BUILTIN_SET_IOS.
